--- a/PopMS/Areas/Orders/Views/order_pop/Index.cshtml
+++ b/PopMS/Areas/Orders/Views/order_pop/Index.cshtml
@@ -2,9 +2,10 @@
 @inject IStringLocalizer<WalkingTec.Mvvm.Core.Program> Localizer;
 
 <wt:searchpanel vm="@Model" reset-btn="true">
-<wt:row items-per-row="ItemsPerRowEnum.Three">
-    <wt:datetime field="Searcher.OrderDate" range="true" type="Date" />
-    <wt:combobox field="Searcher.ContractID" items="Searcher.AllContracts" empty-text="全部"/>
-</wt:row>
+    <wt:row items-per-row="ItemsPerRowEnum.Three">
+        <wt:datetime field="Searcher.OrderDate" range="true" type="Date" />
+        <wt:combobox field="Searcher.ContractID" items="Searcher.AllContracts" empty-text="全部" />
+        <wt:combobox field="Searcher.Status"  empty-text="全部" />
+    </wt:row>
 </wt:searchpanel>
 <wt:grid vm="@Model" url="/Orders/order_pop/Search"/>
