--- a/PopMS/Areas/Orders/Views/order_pop/Create.cshtml
+++ b/PopMS/Areas/Orders/Views/order_pop/Create.cshtml
@@ -12,3 +12,8 @@
         <wt:closebutton />
     </wt:row>
 </wt:form>
+<script>
+    $(function () {
+        $("#order_popVM_Entity_OrderQty").focus().select();
+    })
+</script>
