--- a/PopMS/Areas/BASE/Views/pop/Delete.cshtml
+++ b/PopMS/Areas/BASE/Views/pop/Delete.cshtml
@@ -3,9 +3,16 @@
 
 <wt:form vm="@Model">
 	<wt:quote>@Model.Localizer["DeleteConfirm"]</wt:quote>
-<wt:row items-per-row="ItemsPerRowEnum.One">
+<wt:row items-per-row="ItemsPerRowEnum.Two">
+<wt:display field="Entity.Group.Name" />
+<wt:display field="Entity.PopIndex" />
+<wt:display field="Entity.OutID" />
 <wt:display field="Entity.PopName" />
 <wt:display field="Entity.index" />
+<wt:display field="Entity.Pack" />
+<wt:display field="Entity.Unit" />
+<wt:display field="Entity.Weight" />
+<wt:display field="Entity.ImageID" />
 </wt:row>
     <wt:hidden field="Entity.ID" />
     <wt:row align="AlignEnum.Right">
