--- a/PopMS/Areas/BASE/Views/area_location/Index.cshtml
+++ b/PopMS/Areas/BASE/Views/area_location/Index.cshtml
@@ -2,9 +2,10 @@
 @inject IStringLocalizer<WalkingTec.Mvvm.Core.Program> Localizer;
 
 <wt:searchpanel vm="@Model" reset-btn="true">
-<wt:row items-per-row="ItemsPerRowEnum.Three">
-<wt:combobox field="Searcher.AreaID" items="Searcher.AllAreas" empty-text="@Localizer["All"]" />
-<wt:combobox field="Searcher.isMix" empty-text="@Localizer["All"]" />
-</wt:row>
+    <wt:row items-per-row="ItemsPerRowEnum.Three">
+        <wt:combobox field="Searcher.DCID" items="Searcher.AllDCs" empty-text="@Localizer["All"]" />
+        <wt:combobox field="Searcher.AreaID" items="Searcher.AllAreas" empty-text="@Localizer["All"]" />
+        <wt:combobox field="Searcher.isMix" empty-text="@Localizer["All"]" />
+    </wt:row>
 </wt:searchpanel>
 <wt:grid vm="@Model" url="/BASE/area_location/Search"/>
