--- a/PopMS/Areas/CTT/Views/contract_pop/Edit.cshtml
+++ b/PopMS/Areas/CTT/Views/contract_pop/Edit.cshtml
@@ -2,7 +2,7 @@
 @inject IStringLocalizer<WalkingTec.Mvvm.Core.Program> Localizer;
 
 <wt:form vm="@Model">
-    <wt:row items-per-row="ItemsPerRowEnum.Two">
+    <wt:row items-per-row="ItemsPerRowEnum.One">
         <wt:combobox field="Entity.ContractID" items="AllContracts" />
         <wt:combobox field="Entity.PopID" items="AllPops" />
         <wt:textbox field="Entity.UnitPack" />
