--- a/PopMS/wwwroot/sitecss/logincss.css
+++ b/PopMS/wwwroot/sitecss/logincss.css
@@ -116,6 +116,11 @@ li i.login-code {
     margin-top: 10px;
 }
 
+.login-DownBtn{
+    width:300px;
+    height:100px;
+}
+
 .login-button {
     width: 100%;
     background-color: #5C99FF;
