--- a/PopMS/Areas/Orders/Views/order_pop/Index.cshtml
+++ b/PopMS/Areas/Orders/Views/order_pop/Index.cshtml
@@ -3,9 +3,11 @@
 
 <wt:searchpanel vm="@Model" reset-btn="true">
     <wt:row items-per-row="ItemsPerRowEnum.Three">
+        <wt:combobox field="Searcher.DCID" items="Searcher.AllDCs" empty-text="@Localizer["All"]" />
         <wt:datetime field="Searcher.OrderDate" range="true" type="Date" />
         <wt:combobox field="Searcher.ContractID" items="Searcher.AllContracts" empty-text="全部" />
-        <wt:combobox field="Searcher.Status"  empty-text="全部" />
+        <wt:combobox field="Searcher.Status" empty-text="全部" />
+        <wt:combobox field="Searcher.PopID" items="Searcher.AllPops" empty-text="@Localizer["All"]" />
     </wt:row>
 </wt:searchpanel>
 <wt:grid vm="@Model" url="/Orders/order_pop/Search"/>
