--- a/PopMS/Areas/INV/Views/inventoryOrder/Index.cshtml
+++ b/PopMS/Areas/INV/Views/inventoryOrder/Index.cshtml
@@ -2,8 +2,9 @@
 @inject IStringLocalizer<WalkingTec.Mvvm.Core.Program> Localizer;
 
 <wt:searchpanel vm="@Model" reset-btn="true">
-<wt:row items-per-row="ItemsPerRowEnum.Two">
-<wt:combobox field="Searcher.GroupID" items="Searcher.AllGroups" empty-text="@Localizer["All"]" />
-</wt:row>
+    <wt:row items-per-row="ItemsPerRowEnum.Two">
+        <wt:combobox field="Searcher.DCID" items="Searcher.AllDCs" empty-text="@Localizer["All"]" />
+        <wt:combobox field="Searcher.GroupID" items="Searcher.AllGroups" empty-text="@Localizer["All"]" />
+    </wt:row>
 </wt:searchpanel>
 <wt:grid vm="@Model" url="/INV/inventoryOrder/Search" hidden-checkbox="true" hidden-grid-index="true"/>
