--- a/PopMS/Areas/INV/Views/inventorySum/Index.cshtml
+++ b/PopMS/Areas/INV/Views/inventorySum/Index.cshtml
@@ -2,9 +2,10 @@
 @inject IStringLocalizer<WalkingTec.Mvvm.Core.Program> Localizer;
 
 <wt:searchpanel vm="@Model" reset-btn="true">
-<wt:row items-per-row="ItemsPerRowEnum.Three">
-<wt:datetime field="Searcher.InvDate" range="true" />
-<wt:combobox field="Searcher.PopID" items="Searcher.AllPops" empty-text="@Localizer["All"]" />
-</wt:row>
+    <wt:row items-per-row="ItemsPerRowEnum.Three">
+        <wt:combobox field="Searcher.DCID" items="Searcher.AllDCs" empty-text="@Localizer["All"]" />
+        <wt:datetime field="Searcher.InvDate" range="true" />
+        <wt:combobox field="Searcher.PopID" items="Searcher.AllPops" empty-text="@Localizer["All"]" />
+    </wt:row>
 </wt:searchpanel>
 <wt:grid vm="@Model" url="/INV/inventorySum/Search"/>
